--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/60f54233e9.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
+  <header>
+
+  </header>
   <app-root></app-root>
+  <footer>
+    
+  </footer>
 </body>
 </html>
